# zackphillips.github.io

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  bno055_calibration_backup.json  debug-polar.html  final_test.py  index.html  jibset_track.csv  jibset_track.gpx  manifest.json  package-lock.json  package.json  playwright.config.py  playwright.config.toml  pyproject.toml  pytest-playwright.ini  pytest.ini  signalk_latest.json  signalk_latest_superset.json  sw.js  telemetry.json  test-runner.html  update_data.py
.github/workflows/: playwright-tests.yml
assets/: app.js  constants.js  styles.css  utils.js
data/: magnetic_declination_cache.json  tide_stations.json
data/telemetry/: 2026-01-30T02-55-57.322000Z.json  2026-01-30T02-58-31.145000Z.json  2026-01-30T03-01-04.324000Z.json  2026-01-30T03-03-38.129000Z.json  2026-01-30T03-06-12.161000Z.json  2026-01-30T03-08-46.183000Z.json  2026-01-30T03-11-10.157000Z.json  2026-01-30T03-13-43.087000Z.json  2026-01-30T03-16-16.129000Z.json  2026-01-30T03-18-49.034000Z.json  2026-01-30T03-21-22.140000Z.json  2026-01-30T03-23-56.169000Z.json  2026-01-30T03-26-29.177000Z.json  2026-01-30T03-29-02.129000Z.json  2026-01-30T03-31-35.118000Z.json  2026-01-30T03-34-08.196000Z.json  2026-01-30T03-36-41.015000Z.json  2026-01-30T03-39-14.204000Z.json  2026-01-30T03-41-47.177000Z.json  2026-01-30T03-44-21.088000Z.json  2026-01-30T03-46-55.105000Z.json  2026-01-30T03-49-29.122000Z.json  2026-01-30T03-52-03.209000Z.json  2026-01-30T03-54-36.974000Z.json  2026-01-30T03-57-10.157000Z.json  2026-01-30T03-59-44.011000Z.json  2026-01-30T04-02-18.196000Z.json  2026-01-30T04-04-51.210000Z.json  2026-01-30T04-07-25.176000Z.json  2026-01-30T04-09-59.436000Z.json  2026-01-30T04-12-35.129000Z.json  2026-01-30T04-15-08.160000Z.json  2026-01-30T04-17-41.039000Z.json  2026-01-30T04-20-15.168000Z.json  2026-01-30T04-22-49.244000Z.json  2026-01-30T04-25-22.084000Z.json  2026-01-30T04-27-56.098000Z.json  2026-01-30T04-30-28.094000Z.json  2026-01-30T04-33-02.140000Z.json  2026-01-30T04-35-35.094000Z.json  (+60804 more)
data/telemetry/tracks/: 2026-02-28.gpx  2026-03-01.gpx  2026-03-05.gpx  2026-03-08.gpx  2026-03-09.gpx  2026-03-11.gpx  2026-03-12.gpx  2026-03-14.gpx  2026-03-15.gpx  2026-03-21.gpx  2026-03-26.gpx  2026-03-27.gpx  2026-04-04.gpx  2026-04-05.gpx  2026-04-11.gpx  2026-04-20.gpx  2026-04-25.gpx  2026-04-26.gpx  2026-04-27.gpx  2026-05-03.gpx  2026-05-04.gpx  2026-05-05.gpx  2026-05-06.gpx  2026-05-07.gpx  2026-05-08.gpx  2026-05-09.gpx  2026-05-10.gpx  2026-05-14.gpx  2026-05-30.gpx  2026-05-31.gpx  2026-06-01.gpx  2026-06-03.gpx  2026-06-06.gpx  2026-06-13.gpx  2026-06-14.gpx  2026-06-15.gpx  2026-06-20.gpx  2026-06-27.gpx  2026-07-04.gpx  2026-07-05.gpx  (+2 more)
data/vessel/: info.json  info.yaml  polars.csv  polars_calculated.csv  sensor_config_example.json  sensor_config_example.yaml  signalk_token.txt
data/vessel/polars/: polars_readme.md
docs/: changelog.md  operations.md  playwright-testing.md  systems.md
esp/esp_engine_reader/: .gitignore  CMakeLists.txt  Makefile  main.py  platformio.ini  pyproject.toml  sdkconfig.espidf_esp32c3  sdkconfig.espidf_esp32s3
esp/esp_engine_reader/src/: main.cpp
resources/: polars.csv
resources/polars/: polars.csv  polars_readme.md
scripts/: __init__.py  backfill_tracks.py  bno055_register_io.py  calibrate_bno055_imu.py  calibrate_heading.py  calibrate_mmc5603_heading.py  calibrate_sgp30.py  calibrate_sgp30_air_quality.py  check_signalk_token.py  i2c_sensor_read_and_publish.py  magnetic_calculation.py  magnetic_deviation.py  magnetic_variation_service.py  read_sensor_data.py  request_signalk_token.py  run_playwright_tests.py  run_sensor.py  sensors_to_signalk.py  signalk_token_management.py  telemetry_to_jibset.py  update_polar_data.py  update_signalk_data.py  utils.py  vessel_config_wizard.py
scripts/sensors/: __init__.py  base.py  bme280_sensor.py  bno055_sensor.py  mmc5603_sensor.py  sgp30_sensor.py  swell_analyzer.py
services/: polars.service.tpl  sensor.service.tpl  systemd.service.tpl
tests/: conftest.py  test_gpx_tracks.py  test_update_polar_data.py  test_update_signalk_data.py  test_update_signalk_data_integration.py  test_update_signalk_data_unit.py  test_vessel_tracker_playwright.py
tests/js/: constants.test.js  utils.test.js
