[project]
name = "zackphillips-github-io"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "websocket-client>=1.6.4",
    "PyJWT>=2.8.0",
    "lgpio>=0.2.0.0",
    "smbus2>=0.4.3",
    "smbus>=1.1",
    "bme280>=0.1.0",
    "adafruit-circuitpython-bno055>=1.4.0",
    "adafruit-circuitpython-sgp30>=1.2.0",
    "adafruit-circuitpython-mmc56x3>=1.0.0",
    "adafruit-blinka>=8.0.0",
    "pytest>=8.4.1",
    "pre-commit>=3.6.0",
    "ruff>=0.3.4",
    "geomag>=0.9.2015",
    "pyyaml>=6.0.1",
    "aider>=0.2.6",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
