[project]
name = "esp-engine-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # PlatformIO core
    "platformio>=6.1.18",
    "pip>=25.2",
    
    # ESP toolchain dependencies
    "bitstring>=4.3.1",
    "cryptography>=46.0.2",
    "ecdsa>=0.19.1",
    "intelhex>=2.3.0",
    "reedsolo>=1.7.0",
    
    # Serial communication and firmware tools
    "pyserial>=3.5",
    "esptool>=4.7.0",
    "pyelftools>=0.31",
    
    # Common PlatformIO dependencies
    "click>=8.1.0",
    "colorama>=0.4.6",
    "semantic-version>=2.10.0",
    "tabulate>=0.9.0",
    "marshmallow>=3.19.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "certifi>=2023.7.22",
    
    # Network and web dependencies (for OTA, web server, etc.)
    "bottle>=0.12.25",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "anyio>=4.0.0",
    "h11>=0.14.0",
    "sniffio>=1.3.0",
    "wsproto>=1.2.0",
    
    # JSON and data handling
    "ajsonrpc>=1.2.0",
    
    # Additional tools that might be needed
    "packaging>=23.0",
    "typing-extensions>=4.7.0",
]
